@@ -28,6 +28,7 @@
 #define NAUTILUS_APPLICATION_H
 
 #include <gdk/gdk.h>
+#include <gio/gvolumemonitor.h>
 #include <bonobo/bonobo-generic-factory.h>
 #include <libnautilus-private/nautilus-undo-manager.h>
 
@@ -56,6 +57,7 @@ typedef struct {
 	NautilusUndoManager *undo_manager;
 	NautilusShell *shell;
 	gboolean shell_registered;
+	GVolumeMonitor *volume_monitor;
 } NautilusApplication;
 
 typedef struct {
